<resources>
    <string name="app_name">Manilha</string>
    <string name="four_players">4 jogadores</string>
    <string name="six_players">6 jogadores</string>
    <string name="rules">Regras do Truco</string>
    <string name="btn_twelve">Doze!</string>
    <string name="btn_nine">Nove!</string>
    <string name="btn_reset">Reiniciar Partida</string>
    <string name="btn_six">Seis!</string>
    <string name="btn_truco">Truco!</string>
    <string name="team_b">Time B</string>
    <string name="tv_zero">0</string>
    <string name="team_a">Time A</string>
    <string name="resetGame">Reiniciar jogo</string>
    <string name="player_1">Jogador 1:</string>
    <string name="player_2">Jogador 2:</string>
    <string name="player_3">Jogador 3:</string>
    <string name="iv_logo_description">Logo de cartas representando o jogo de truco</string>
    <string name="opcional">(Opcional)</string>
    <string name="start">Iniciar!</string>
    <string name="_0">(0)</string>
    <string name="btn_one_point">Um ponto!</string>
</resources>
