<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:backgroundTint="#FFCDD2"
    tools:context="br.com.fddittmar.manilha.activity.MainActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/manilha_logo"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitCenter"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/btn_four_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/four_players"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_six_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/six_players"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btn_regras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"/>

    </LinearLayout>



</LinearLayout>
